--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
-
 {
+  "name": "online-store-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fuentesrichard/online-store-server.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "homepage": "https://github.com/fuentesrichard/online-store-server#readme",
   "dependencies": {
-    "jason-server": "^3.0.0"
+    "jason-server": "^0.17.0"
   }
 }
